# joes-opengl-engine

./: CMakeLists.txt
common/: shader.hpp
src/circle/: main.cpp
src/cube/: main.cpp
src/shaders/: circle.frag  circle.vert
src/textrenderer/: main.cpp
